old/manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    # garante HTTP simples (sem redirecionar para TLS)
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  # Acesso via túnel (sslip -> 127.0.0.1)
  - host: grafana.127.0.0.1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # nome padrão do serviço do chart kube-prometheus-stack
            name: kube-prometheus-stack-grafana
            port:
              number: 80
  # Acesso local na rede (sslip -> 192.168.30.101)
  - host: grafana.192.168.30.101.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
  # Fallback por IP (sem host)
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
